クラス名の見直しをしました

--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -142,27 +142,27 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\ColliderComponent.cpp">
+    <ClCompile Include="Engine\Collision\CollisionBody.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\AnimationComponentManager.cpp">
+    <ClCompile Include="Engine\Core\Component\Store\AnimationStore.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\CollisionManager.cpp">
+    <ClCompile Include="Engine\Collision\CollisionManager.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\ComponentManager.cpp">
+    <ClCompile Include="Engine\Core\Component\ECS\ComponentManager.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\EntityManager.cpp">
+    <ClCompile Include="Engine\Core\Component\ECS\EntityRegistry.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\SpriteComponentManager.cpp">
+    <ClCompile Include="Engine\Core\Component\Store\SpriteStore.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -174,7 +174,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\User\ComponentHelper.cpp">
+    <ClCompile Include="Engine\Core\Component\ComponentHelper.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -242,11 +242,11 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\TransformManager.cpp">
+    <ClCompile Include="Engine\Core\Component\Store\TransformStore.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\Manager\MaterialManager.cpp">
+    <ClCompile Include="Engine\Core\Component\Store\MaterialStore.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -276,14 +276,14 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Core\Graphics\PostProcess\RenderTexture.cpp" />
     <ClCompile Include="Engine\Core\Graphics\PostProcess\ShadowMap.cpp" />
     <ClCompile Include="Engine\Core\Graphics\GPUObject\CBufferStructures.cpp" />
-    <ClCompile Include="Engine\Core\Lib\Collision.cpp">
+    <ClCompile Include="Engine\Collision\CollisionGeometry.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Lib\DxUtils.cpp" />
+    <ClCompile Include="Engine\Core\Graphics\Lib\DxUtils.cpp" />
     <ClCompile Include="Engine\Asset\Filesystem.cpp" />
     <ClCompile Include="Engine\Core\Window\WinApp.cpp" />
-    <ClCompile Include="Engine\Core\Component\Manager\ImGuiComponentManager.cpp">
+    <ClCompile Include="Engine\Editor\ImGuiInspector.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -305,7 +305,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Engine\Core\Component\User\Collider.cpp" />
+    <ClCompile Include="Engine\Collision\Collider.cpp" />
     <ClCompile Include="Game\Camera\Base\BaseCamera.cpp" />
     <ClCompile Include="Game\Camera\Camera2D.cpp">
       <SubType>
@@ -376,27 +376,27 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\ColliderComponent.h">
+    <ClInclude Include="Engine\Collision\CollisionBody.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\AnimationComponentManager.h">
+    <ClInclude Include="Engine\Core\Component\Store\AnimationStore.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\CollisionManager.h">
+    <ClInclude Include="Engine\Collision\CollisionManager.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\ComponentManager.h">
+    <ClInclude Include="Engine\Core\Component\ECS\ComponentManager.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\EntityManager.h">
+    <ClInclude Include="Engine\Core\Component\ECS\EntityRegistry.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\SpriteComponentManager.h">
+    <ClInclude Include="Engine\Core\Component\Store\SpriteStore.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -408,7 +408,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\User\ComponentHelper.h">
+    <ClInclude Include="Engine\Core\Component\ComponentHelper.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -488,11 +488,11 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\TransformManager.h">
+    <ClInclude Include="Engine\Core\Component\Store\TransformStore.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\Manager\MaterialManager.h">
+    <ClInclude Include="Engine\Core\Component\Store\MaterialStore.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -523,16 +523,16 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Core\Graphics\PostProcess\RenderTexture.h" />
     <ClInclude Include="Engine\Core\Graphics\PostProcess\ShadowMap.h" />
     <ClInclude Include="Engine\Core\Graphics\GPUObject\CBufferStructures.h" />
-    <ClInclude Include="Engine\Core\Lib\Collision.h">
+    <ClInclude Include="Engine\Collision\CollisionGeometry.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Lib\ComPtr.h" />
-    <ClInclude Include="Engine\Core\Lib\DxStructures.h" />
-    <ClInclude Include="Engine\Core\Lib\DxUtils.h" />
+    <ClInclude Include="Engine\Core\Graphics\Lib\ComPtr.h" />
+    <ClInclude Include="Engine\Core\Graphics\Lib\DxStructures.h" />
+    <ClInclude Include="Engine\Core\Graphics\Lib\DxUtils.h" />
     <ClInclude Include="Engine\Asset\Filesystem.h" />
     <ClInclude Include="Engine\Core\Window\WinApp.h" />
-    <ClInclude Include="Engine\Core\Component\Manager\ImGuiComponentManager.h">
+    <ClInclude Include="Engine\Editor\ImGuiInspector.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -553,7 +553,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Component\User\Collider.h" />
+    <ClInclude Include="Engine\Collision\Collider.h" />
     <ClInclude Include="Game\Camera\Base\BaseCamera.h" />
     <ClInclude Include="Game\Camera\Camera2D.h">
       <SubType>
