--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -5,7 +5,7 @@ on:
         - master
 env:
   # リポジトリのルートディレクトリを基点としたソリューションファイルパス
-  SOLUTION_FILE_PATH: project/Engine.sln
+  SOLUTION_FILE_PATH: Project/DirectXGame.sln
   # Visual Studio の構成 (Debug / Release)
   CONFIGURATION: Debug
 jobs:
