--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -176,9 +176,10 @@ Size=465,196
 Collapsed=0
 
 [Window][objectEditorLayout]
-Pos=238,91
-Size=449,151
+Pos=229,132
+Size=515,113
 Collapsed=0
+DockId=0x00000016,0
 
 [Window][3D Viewer]
 Pos=150,67
@@ -196,7 +197,7 @@ Size=125,588
 
 [Window][Inspector/leftLayout_96888853]
 IsChild=1
-Size=266,324
+Size=256,117
 
 [Window][Inspector/rightLayout_78BB1392]
 IsChild=1
@@ -205,6 +206,12 @@ Size=282,336
 [Window][Inspector/bottomLayout_B6856CF9]
 IsChild=1
 Size=540,370
+
+[Window][primitiveEditorLayout]
+Pos=318,321
+Size=515,113
+Collapsed=0
+DockId=0x00000016,1
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -285,12 +292,13 @@ Column 2  Weight=1.0000
 DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
   DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
   DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
+DockNode              ID=0x00000016 Pos=318,321 Size=515,113 Selected=0x475E4117
 DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1440,810 Split=X
   DockNode            ID=0x0000000C Parent=0x11111111 SizeRef=882,810 Split=X
     DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x1E7E18E3
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0xD1EB2482
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
           DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0xEA83D666
             DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=226,283 Selected=0xEA83D666
